// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractItem should render correctly 1`] = `
<StatusCard
  amount={21000}
  color="orange"
  currency="EUR"
  label="make payment"
  labelIcon={
    <Icon
      color="#FFFCFA"
      id="dollarSign"
      size={16}
    />
  }
  onPress={[Function]}
  price={21}
  subtext="01 / 01 / 21"
  title="PC‑NAN‑NAN"
  unreadMessages={0}
/>
`;

exports[`ContractItem should render correctly with past contract 1`] = `
<StatusCard
  amount={21000}
  color="green"
  currency="EUR"
  icon={
    <Icon
      color="#05A85A"
      id="buy"
      size={16}
    />
  }
  onPress={[Function]}
  price={21}
  subtext="01 / 01 / 21"
  title="PC‑NAN‑NAN"
  unreadMessages={0}
/>
`;

exports[`ContractItem should render correctly with unread messages 1`] = `
<StatusCard
  amount={21000}
  color="orange"
  currency="EUR"
  label="make payment"
  labelIcon={
    <Icon
      color="#FFFCFA"
      id="dollarSign"
      size={16}
    />
  }
  onPress={[Function]}
  price={21}
  subtext="01 / 01 / 21"
  title="PC‑NAN‑NAN"
  unreadMessages={1}
/>
`;

exports[`OfferItem should render correctly 1`] = `
<StatusCard
  amount={
    [
      21000,
      210000,
    ]
  }
  color="mild"
  label="looking for match"
  labelIcon={
    <Icon
      color="#7D675E"
      id="search"
      size={16}
    />
  }
  onPress={[Function]}
  subtext="01 / 01 / 21"
  title="P‑NAN"
/>
`;

exports[`OfferItem should render correctly if it's a past offer 1`] = `
<StatusCard
  amount={
    [
      21000,
      210000,
    ]
  }
  color="green"
  icon={
    <Icon
      color="#05A85A"
      id="xCircle"
      size={16}
    />
  }
  onPress={[Function]}
  subtext="01 / 01 / 21"
  title="P‑NAN"
/>
`;
